Pequenos detalhes na header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,800;1,200;1,300;1,400;1,500;1,700&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>GuildWars2.com</title>
@@ -69,14 +70,20 @@
            <h2>Sunqua Peak</h2>
            <p class="p1">An all-new fractal and challenge mode</p>
            <div class="leia-mais">
-               <p class="p2">
-                LEARN MORE  <i class="fas fa-play"></i>
-              </p>
+               <a href="index.html">
+                    <p class="p2">
+                        Learn more  <i class="fas fa-play"></i>
+                    </p>
+                    <img src="img/fundo-learn.jpg" alt="">
+                </a>
            </div>
            <div class="showcase-container">
                <a href="index.html">
                 <video src="video/572eb200915-GW2-Carousel-Sunqua-Peak.mp4"autoplay="" muted="" loop="" playsinline=""></video>
                </a>
+               <div class="img-showcase-rodape">
+                       <img src="img/featured-ft.c2e7567e.jpg" alt="">
+               </div>
            </div>
         </header>
     </div>
