Criaçao da section (news)

--- a/index.html
+++ b/index.html
@@ -87,6 +87,178 @@
            </div>
         </header>
     </div>
+    <!--Area de noticias-->
+    <section>
+        <div class="news">
+             <h3>News</h3>
+             <div class="news-list">
+                 <div class="list-items">
+                  <ul>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item">
+                           <div class="data">
+                           <p class="dia">17</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Guild Chat: Sunqua Peak Development</h4></a>
+                          <li>Building the mountain.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item2">
+                           <div class="data">
+                           <p class="dia">15</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Fun School Fashion with the Queensdale Academy Package</h4></a>
+                          <li>Learning is magic.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item3">
+                           <div class="data">
+                           <p class="dia">15</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Visit Sunqua Peak Today</h4></a>
+                          <li>There’s nowhere to go but up.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item4">
+                           <div class="data">
+                           <p class="dia">14</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Let’s Play Sunqua Peak</h4></a>
+                          <li>Tune in to watch ArenaNet developers play Guild Wars 2.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item5">
+                           <div class="data">
+                           <p class="dia">11</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Sunqua Peak: Journey to a Sacred Land</h4></a>
+                          <li>Learn all about developing the newest Fractal of the Mists.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item6">
+                           <div class="data">
+                           <p class="dia">10</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Guild Chat: Sunqua Peak</h4></a>
+                          <li>Join us tomorrow for the next episode of the Guild Chat livestream.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item7">
+                           <div class="data">
+                           <p class="dia">08</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Ascend Sunqua Peak on September 15</h4></a>
+                          <li>An all-new fractal and challenge mode.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+                      <!--data-->
+                     <div class="list-item">
+                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                           <div class="item8">
+                           <div class="data">
+                           <p class="dia">08</p>
+                           <p class="mes">Sep</p>
+                          </div>
+                         <div class="palavra">
+                          <a href=""><h4>Make Unique Friends with the Bizarre Beasts Mount Skin Collection</h4></a>
+                          <li>Fifteen lovable new looks for your mounts.</li>
+                          <a href="">Read More</a>
+                        </div>
+                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                      </div>
+                     </div>
+
+                     <div class="all-news">
+                        <a href="index.html">All News</a>
+                     </div>
+
+                  </ul>
+                </div>
+                  <div class="cards-list">
+                      <div class="card">
+                          <div class="card-border1">
+                              <img class="line-top" src="img/line-top.4bf69877.jpg" alt="">
+                              <img src="img/20526EN-2019_GW2_CoreRefresh_SideBar.jpg" alt="">
+                          </div>
+                      </div>
+                      <div class="card">
+                           <div class="card-border2">
+                               <img class="line-top" src="img/line-top.4bf69877.jpg" alt="">
+                               <img src="img/34d71190830-GW2-HOT-POF-Sidebar.jpg" alt="">
+                               <p class="p-card-1">Get Heart of Thorns FREE When</p>
+                               <p class="p-card-2">You Purchase Path of Fire</p>
+                               <a href="">Buy now <i class="fas fa-play"></i></a>
+                            </div>
+                      </div>
+                      <div class="card">
+                            <div class="card-border2">
+                               <img class="line-top" src="img/line-top.4bf69877.jpg" alt="">
+                               <img src="img/e021bFFBF_mask_GuildWars-Website_TOP.jpg" alt="">
+                               <p class="p-card-2">Get Your GW2 Merch</p>
+                               <a href="">Learn more <i class="fas fa-play"></i></a>
+                            </div>
+                      </div>
+                  </div>
+                      
+                </div>
+            </div>
+        </section>
+
 
         <!--Link para as icons-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
