Criação da pasta assets mudança de algumas fontes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="top">
            <div class="top-menu" >
                <a href="index.html">
-                   <img src="img/arenanet-color.svg" alt="">
+                   <img src="assets/img/arenanet-color.svg" alt="">
                </a>
                <ul>
                    <div class="top-list1">
@@ -47,7 +47,7 @@
         <div class="navbar-container">
             <div class="navbar-menu">
                 <a class="logo" href="index.html">
-                    <img class="logo" src="img/Sem Título-1.png" alt="">
+                    <img class="logo" src="assets/img/Sem Título-1.png" alt="">
                 </a>
                   <ul>
                     <div class="navbar-list">
@@ -60,7 +60,7 @@
                     </div>
                   </ul>
                 <button class="bnt-donwload">Download now</button>
-                <img class="navbar-fundo" src="img/header.26e56999.jpg" alt="">
+                <img class="navbar-fundo" src="assets/img/header.26e56999.jpg" alt="">
                 
             </div>
         </div>
@@ -74,15 +74,15 @@
                     <p class="p2">
                         Learn more  <i class="fas fa-play"></i>
                     </p>
-                    <img src="img/fundo-learn.jpg" alt="">
+                    <img src="assets/img/fundo-learn.jpg" alt="">
                 </a>
            </div>
            <div class="showcase-container">
                <a href="index.html">
-                <video src="video/572eb200915-GW2-Carousel-Sunqua-Peak.mp4"autoplay="" muted="" loop="" playsinline=""></video>
+                <video src="assets/video/572eb200915-GW2-Carousel-Sunqua-Peak.mp4"autoplay="" muted="" loop="" playsinline=""></video>
                </a>
                <div class="img-showcase-rodape">
-                       <img src="img/featured-ft.c2e7567e.jpg" alt="">
+                       <img src="assets/img/featured-ft.c2e7567e.jpg" alt="">
                </div>
            </div>
         </header>
@@ -96,7 +96,7 @@
                   <ul>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item">
                            <div class="data">
                            <p class="dia">17</p>
@@ -107,12 +107,12 @@
                           <li>Building the mountain.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item2">
                            <div class="data">
                            <p class="dia">15</p>
@@ -123,12 +123,12 @@
                           <li>Learning is magic.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item3">
                            <div class="data">
                            <p class="dia">15</p>
@@ -139,12 +139,12 @@
                           <li>There’s nowhere to go but up.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item4">
                            <div class="data">
                            <p class="dia">14</p>
@@ -155,12 +155,12 @@
                           <li>Tune in to watch ArenaNet developers play Guild Wars 2.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item5">
                            <div class="data">
                            <p class="dia">11</p>
@@ -171,12 +171,12 @@
                           <li>Learn all about developing the newest Fractal of the Mists.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item6">
                            <div class="data">
                            <p class="dia">10</p>
@@ -187,12 +187,12 @@
                           <li>Join us tomorrow for the next episode of the Guild Chat livestream.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item7">
                            <div class="data">
                            <p class="dia">08</p>
@@ -203,12 +203,12 @@
                           <li>An all-new fractal and challenge mode.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
                       <!--data-->
                      <div class="list-item">
-                          <img src="img/news-bg.d8d9e0f6.jpg" alt="">
+                          <img src="assets/img/news-bg.d8d9e0f6.jpg" alt="">
                            <div class="item8">
                            <div class="data">
                            <p class="dia">08</p>
@@ -219,7 +219,7 @@
                           <li>Fifteen lovable new looks for your mounts.</li>
                           <a href="">Read More</a>
                         </div>
-                        <img class="arrow" src="img/arrow-expand.e09cc937.png" alt="">
+                        <img class="arrow" src="assets/img/arrow-expand.e09cc937.png" alt="">
                       </div>
                      </div>
 
@@ -232,14 +232,14 @@
                   <div class="cards-list">
                       <div class="card">
                           <div class="card-border1">
-                              <img class="line-top" src="img/line-top.4bf69877.jpg" alt="">
-                              <img src="img/20526EN-2019_GW2_CoreRefresh_SideBar.jpg" alt="">
+                              <img class="line-top" src="assets/img/line-top.4bf69877.jpg" alt="">
+                              <img src="assets/img/20526EN-2019_GW2_CoreRefresh_SideBar.jpg" alt="">
                           </div>
                       </div>
                       <div class="card">
                            <div class="card-border2">
-                               <img class="line-top" src="img/line-top.4bf69877.jpg" alt="">
-                               <img src="img/34d71190830-GW2-HOT-POF-Sidebar.jpg" alt="">
+                               <img class="line-top" src="assets/img/line-top.4bf69877.jpg" alt="">
+                               <img src="assets/img/34d71190830-GW2-HOT-POF-Sidebar.jpg" alt="">
                                <p class="p-card-1">Get Heart of Thorns FREE When</p>
                                <p class="p-card-2">You Purchase Path of Fire</p>
                                <a href="">Buy now <i class="fas fa-play"></i></a>
@@ -247,8 +247,8 @@
                       </div>
                       <div class="card">
                             <div class="card-border2">
-                               <img class="line-top" src="img/line-top.4bf69877.jpg" alt="">
-                               <img src="img/e021bFFBF_mask_GuildWars-Website_TOP.jpg" alt="">
+                               <img class="line-top" src="assets/img/line-top.4bf69877.jpg" alt="">
+                               <img src="assets/img/e021bFFBF_mask_GuildWars-Website_TOP.jpg" alt="">
                                <p class="p-card-2">Get Your GW2 Merch</p>
                                <a href="">Learn more <i class="fas fa-play"></i></a>
                             </div>
