--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,800;1,200;1,300;1,400;1,500;1,700&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon//favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>GuildWars2.com</title>
 </head>
 <body>
