--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 </a>
                   <ul>
                     <div class="navbar-list">
-                      <li>Game</li>
-                      <li>Releases</li>
-                      <li>Media</li>
-                      <li>Community</li>
-                      <li>Services</li>
-                      <li>Shop</li>
+                      <li class="game">Game</li>
+                      <li class="releases">Releases</li>
+                      <li class="media">Media</li>
+                      <li class="community">Community</li>
+                      <li class="services">Services</li>
+                      <li class="shop">Shop</li>
                     </div>
                   </ul>
                 <button class="bnt-donwload">Download now</button>
@@ -75,6 +75,81 @@
             </div>
         </div>
       </header>
+      <div class="sub-menu">
+             <ul class="sub-lists1">
+               <img class="img-1" src="assets/img/nav-sub-aba.png" alt="">
+               <li class="sub-list1">The Races of Tyria</li><img class="seta-sub1" src="assets/img/menu-arrow.png" alt="">
+               <li class="sub-list-line1">_____________________________________</li>
+               <li class="sub-list1">Profession</li><img class="seta-sub2" src="assets/img/menu-arrow.png" alt="">
+               <li class="sub-list-line1">_____________________________________</li>
+               <li class="sub-list1">Combat</li>
+               <li class="sub-list-line1">_____________________________________</li>
+               <li class="sub-list1">Instanced Combat</li>
+               <li class="sub-list-line1">_____________________________________</li>
+               <li class="sub-list1">Dynamic Events</li>
+               <li class="sub-list-line1">_____________________________________</li>
+               <li class="sub-list1">Personal Story</li>
+               <li class="sub-list-line1">_____________________________________</li>
+               <li class="sub-list1">Competitive Play</li>
+             </ul>
+             <ul class="sub-lists2">
+              <img class="img-2" src="assets/img/nav-sub-aba.png" alt="">
+               <li class="sub-list2" id="l2-1">Living World</li>
+               <br><br>
+               <a title="Content updates that add story, rewards &amp; more to the world of GW2" href="" class="a-1">                
+               Content updates that add story,<br> rewards &amp; more to the world of GW2</a>
+               <li class="sub-list-line2">_____________________________________</li>
+               <a href="" class="a-2">Heart of Thorns</a><li class="sub-list-back1">Expansion</li>
+               <li class="sub-list-line2">_____________________________________</li>
+               <a href="" class="a-3">Path of Fire</a><li class="sub-list-back2">Expansion</li>
+             </ul>
+             <ul class="sub-lists3">
+              <img class="img-3" src="assets/img/nav-sub-aba.png" alt="">             
+               <li class="sub-list3">Concept Art</li>
+               <li class="sub-list-line3">_____________________________________</li>
+               <li class="sub-list3" id="l3-2">Screenshots</li>
+               <li class="sub-list-line3">_____________________________________</li>
+               <li class="sub-list3">Videos</li>
+               <li class="sub-list-line3">_____________________________________</li>
+               <li class="sub-list3">Wallpapers</li>
+               <li class="sub-list-line3">_____________________________________</li>
+               <li class="sub-list3">Awards &amp; Accolades</li>
+               <li class="sub-list-line3">_____________________________________</li>
+               <a href="" class="a-4">Guild Wars 2</a><li class="sub-list-back3" id="l3-6">Asset Kit</li>
+             </ul>
+             <ul class="sub-lists4">
+              <img class="img-4" src="assets/img/nav-sub-aba.png" alt="">              
+               <li class="sub-list4">News</li>
+               <li class="sub-list-line4">_____________________________________</li>
+               <li class="sub-list4">Leaderboards</li>
+               <li class="sub-list-line4">_____________________________________</li>
+               <li class="sub-list4">Partner Program</li>
+               <li class="sub-list-line4">_____________________________________</li>
+               <li class="sub-list4">Affiliate Program</li>
+             </ul>
+             <ul class="sub-lists5">
+              <img class="img-5" src="assets/img/nav-sub-aba.png" alt="">           
+               <li class="sub-list5">Download Game</li>
+               <li class="sub-list-line5">_____________________________________</li>
+               <li class="sub-list5">My Account</li>
+               <li class="sub-list-line5">_____________________________________</li>
+               <li class="sub-list5">Hall of Monuments</li>
+               <li class="sub-list-line5">_____________________________________</li>
+               <li class="sub-list5">New Player Guide</li>
+               <li class="sub-list-line5">_____________________________________</li>
+               <li class="sub-list5">Support</li>
+             </ul>
+             <ul class="sub-lists6">
+              <img class="img-6" src="assets/img/nav-sub-aba.png" alt="">          
+               <li class="sub-list6">Buy</li><a class="a-5" href="">Guild Wars 2</a>
+               <li class="sub-list-line6">_____________________________________</li>
+               <li class="sub-list6">Merchandise</li>
+               <li class="sub-list-line6">_____________________________________</li>
+               <li class="sub-list6">Merchandise Ideas Contest</li>
+               <li class="sub-list-line6">_____________________________________</li>
+               <li class="sub-list6">Partners and Sponsors</li>
+             </ul>
+      </div>
 
        <header class="showcase">
            <h2>Sunqua Peak</h2>
