retoques nas abas interativas

--- a/index.html
+++ b/index.html
@@ -92,86 +92,86 @@
         <div v-show="gameVisi">
              <ul class="sub-lists1" @mouseleave="gameOcult()">
                <img class="img-1" src="assets/img/nav-sub-aba.png" alt="">
-               <li class="sub-list1">The Races of Tyria</li><img class="seta-sub1" src="assets/img/menu-arrow.png" alt="">
+               <li class="sub-list1">The Races of Tyria</li><img class="seta-sub1" src="assets/img/menu-arrow.png" alt=""><button class="button-sub1"></button>
                <li class="sub-list-line1">_____________________________________</li>
-               <li class="sub-list1">Profession</li><img class="seta-sub2" src="assets/img/menu-arrow.png" alt="">
+               <li class="sub-list1">Profession</li><img class="seta-sub2" src="assets/img/menu-arrow.png" alt=""><button class="button-sub2"></button>
                <li class="sub-list-line1">_____________________________________</li>
-               <li class="sub-list1">Combat</li>
+               <li class="sub-list1">Combat</li><button class="button-sub3"></button>
                <li class="sub-list-line1">_____________________________________</li>
-               <li class="sub-list1">Instanced Combat</li>
+               <li class="sub-list1">Instanced Combat</li><button class="button-sub4"></button>
                <li class="sub-list-line1">_____________________________________</li>
-               <li class="sub-list1">Dynamic Events</li>
+               <li class="sub-list1">Dynamic Events</li><button class="button-sub5"></button>
                <li class="sub-list-line1">_____________________________________</li>
-               <li class="sub-list1">Personal Story</li>
+               <li class="sub-list1">Personal Story</li><button class="button-sub6"></button>
                <li class="sub-list-line1">_____________________________________</li>
-               <li class="sub-list1">Competitive Play</li>
+               <li class="sub-list1">Competitive Play</li><button class="button-sub7"></button>
              </ul>
             </div>
             <div v-show="releasesVisi">
              <ul class="sub-lists2" @mouseleave="releasesOcult()">
               <img class="img-2" src="assets/img/nav-sub-aba.png" alt="">
-               <li class="sub-list2" id="l2-1">Living World</li>
+               <li class="sub-list2" id="l2-1">Living World</li><button class="button-sub8"></button>
                <br><br>
                <a title="Content updates that add story, rewards &amp; more to the world of GW2" href="" class="a-1">                
                Content updates that add story,<br> rewards &amp; more to the world of GW2</a>
                <li class="sub-list-line2">_____________________________________</li>
-               <a href="" class="a-2">Heart of Thorns</a><li class="sub-list-back1">Expansion</li>
+               <a href="" class="a-2">Heart of Thorns</a><li class="sub-list-back1">Expansion</li><button class="button-sub9"></button>
                <li class="sub-list-line2">_____________________________________</li>
-               <a href="" class="a-3">Path of Fire</a><li class="sub-list-back2">Expansion</li>
+               <a href="" class="a-3">Path of Fire</a><li class="sub-list-back2">Expansion</li><button class="button-sub10"></button>
              </ul>
             </div>
             <div v-show="mediaVisi">
              <ul class="sub-lists3" @mouseleave="mediaOcult()">
               <img class="img-3" src="assets/img/nav-sub-aba.png" alt="">             
-               <li class="sub-list3">Concept Art</li>
+               <li class="sub-list3">Concept Art</li><button class="button-sub11"></button>
                <li class="sub-list-line3">_____________________________________</li>
-               <li class="sub-list3" id="l3-2">Screenshots</li>
+               <li class="sub-list3" id="l3-2">Screenshots</li><button class="button-sub11-5"></button>
                <li class="sub-list-line3">_____________________________________</li>
-               <li class="sub-list3">Videos</li>
+               <li class="sub-list3">Videos</li><button class="button-sub12"></button>
                <li class="sub-list-line3">_____________________________________</li>
-               <li class="sub-list3">Wallpapers</li>
+               <li class="sub-list3">Wallpapers</li><button class="button-sub13"></button>
                <li class="sub-list-line3">_____________________________________</li>
-               <li class="sub-list3">Awards &amp; Accolades</li>
+               <li class="sub-list3">Awards &amp; Accolades</li><button class="button-sub14"></button>
                <li class="sub-list-line3">_____________________________________</li>
-               <a href="" class="a-4">Guild Wars 2</a><li class="sub-list-back3" id="l3-6">Asset Kit</li>
+               <a href="" class="a-4">Guild Wars 2</a><li class="sub-list-back3" id="l3-6">Asset Kit</li><button class="button-sub15"></button>
              </ul>
             </div>
              <div v-show="communityVisi">
              <ul class="sub-lists4" @mouseleave="communityOcult()">
               <img class="img-4" src="assets/img/nav-sub-aba.png" alt="">              
-               <li class="sub-list4">News</li>
+               <li class="sub-list4">News</li><button class="button-sub16"></button>
                <li class="sub-list-line4">_____________________________________</li>
-               <li class="sub-list4">Leaderboards</li>
+               <li class="sub-list4">Leaderboards</li><button class="button-sub17"></button>
                <li class="sub-list-line4">_____________________________________</li>
-               <li class="sub-list4">Partner Program</li>
+               <li class="sub-list4">Partner Program</li><button class="button-sub17-5"></button>
                <li class="sub-list-line4">_____________________________________</li>
-               <li class="sub-list4">Affiliate Program</li>
+               <li class="sub-list4">Affiliate Program</li><button class="button-sub18"></button>
              </ul>
             </div>
              <div v-show="servicesVisi">
              <ul class="sub-lists5" @mouseleave="servicesOcult()">
               <img class="img-5" src="assets/img/nav-sub-aba.png" alt="">           
-               <li class="sub-list5">Download Game</li>
+               <li class="sub-list5">Download Game</li><button class="button-sub19"></button>
                <li class="sub-list-line5">_____________________________________</li>
-               <li class="sub-list5">My Account</li>
+               <li class="sub-list5">My Account</li><button class="button-sub20"></button>
                <li class="sub-list-line5">_____________________________________</li>
-               <li class="sub-list5">Hall of Monuments</li>
+               <li class="sub-list5">Hall of Monuments</li><button class="button-sub21"></button>
                <li class="sub-list-line5">_____________________________________</li>
-               <li class="sub-list5">New Player Guide</li>
+               <li class="sub-list5">New Player Guide</li><button class="button-sub22"></button>
                <li class="sub-list-line5">_____________________________________</li>
-               <li class="sub-list5">Support</li>
+               <li class="sub-list5">Support</li><button class="button-sub23"></button>
              </ul>
             </div>
              <div v-show="shopVisi">
              <ul class="sub-lists6" @mouseleave="shopOcult()">
               <img class="img-6" src="assets/img/nav-sub-aba.png" alt="">          
-               <li class="sub-list6">Buy</li><a class="a-5" href="">Guild Wars 2</a>
+               <li class="sub-list6">Buy</li><a class="a-5" href="">Guild Wars 2</a><button class="button-sub24"></button>
                <li class="sub-list-line6">_____________________________________</li>
-               <li class="sub-list6">Merchandise</li>
+               <li class="sub-list6">Merchandise</li><button class="button-sub25"></button>
                <li class="sub-list-line6">_____________________________________</li>
-               <li class="sub-list6">Merchandise Ideas Contest</li>
+               <li class="sub-list6">Merchandise Ideas Contest</li><button class="button-sub26"></button>
                <li class="sub-list-line6">_____________________________________</li>
-               <li class="sub-list6">Partners and Sponsors</li>
+               <li class="sub-list6">Partners and Sponsors</li><button class="button-sub27"></button>
              </ul>
             </div>
       </div>
